# pubsub-grpc-proxy

./: Cargo.toml  build.rs
src/: auth.rs  cleanup.rs  lib.rs  tests.rs
src/interceptors/: mod.rs  namespace.rs  passthrough.rs
src/proto/: google.api.rs  google.pubsub.v1.rs  mod.rs
