[package]
name = "pubsub-grpc-proxy"
version = "0.1.0"
edition = "2021"
description = "A gRPC proxy for Google Cloud Pub/Sub with request manipulation capabilities"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = { version = "0.12", features = ["tls", "gzip"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
google-cloud-pubsub = "0.30"
googapis = "0.6"
gouth = "0.2"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[lib]
name = "pubsub_grpc_proxy"
path = "src/lib.rs"

[[bin]]
name = "pubsub-grpc-proxy"
path = "src/main.rs" 